[workspace]
members = [
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/mapping-sync",
	"primitives/consensus",
	"primitives/evm",
	"primitives/rpc",
	"template/node",
	"template/runtime",
	"template/test-utils/client",
]

[patch.crates-io]
# We use a custom EVM which support "environmental tracing". The patch allow to force usage of
# this crate version in all transitive dependencies (frontier).
# This will be necessary as long as frontier don't depend on this crate version.
evm = { git = "https://github.com/PureStake/evm", branch = "jeremy-environmental-hook", default-features = false, features = ["with-codec", "tracing"] }
evm-runtime = { git = "https://github.com/PureStake/evm", branch = "jeremy-environmental-hook", default-features = false, features = ["tracing"] }
evm-core = { git = "https://github.com/PureStake/evm", branch = "jeremy-environmental-hook", default-features = false, features = ["with-codec", "tracing"] }
evm-gasometer = { git = "https://github.com/PureStake/evm", branch = "jeremy-environmental-hook", default-features = false, features = ["tracing"] }