[package]
name = "fc-db"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier database backend."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.64"
ethereum = { workspace = true, features = ["with-codec"] }
futures = "0.3.26"
sqlx = { features = ["runtime-tokio-native-tls", "sqlite", "offline"], git = "https://github.com/PureStake/sqlx", branch = "v0.6.2-timeout" }
tokio = { version = "1.24", features = ["sync"] }
kvdb-rocksdb = { workspace = true, optional = true }
log = "0.4.17"
parity-db = { workspace = true, optional = true }
parking_lot = "0.12.1"
scale-codec = { package = "parity-scale-codec", workspace = true }
smallvec = "1.10"
# Substrate
sp-api = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true, features = ["rocksdb"] }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-database = { workspace = true }
sp-storage = { workspace = true }
sp-runtime = { workspace = true }
# Frontier
fp-consensus = { workspace = true }
fp-rpc = { workspace = true }
fp-storage = { workspace = true, features = ["std"] }

[features]
default = ["kvdb-rocksdb", "parity-db"]

[dev-dependencies]
futures = "0.3.26"
tempfile = "3.3.0"
# Substrate
sc-block-builder = { workspace = true }
sp-consensus = { workspace = true }
substrate-test-runtime-client = { workspace = true }
