[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Mapping sync logic for Frontier."
repository = "https://github.com/paritytech/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.24"
futures-timer = "3.0.2"
log = "0.4.17"
sqlx = { features = ["runtime-tokio-native-tls", "sqlite", "offline"], git = "https://github.com/PureStake/sqlx", branch = "v0.6.2-timeout" }
tokio = { version = "1.19", features = ["macros", "sync"] }

# Substrate
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-runtime = { version = "6.0.0", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }

# Frontier
fc-db = { version = "2.0.0-dev", path = "../db" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
ethereum = { version = "0.14.0", features = ["with-codec"] }
tempfile = "3.3.0"
# Frontier
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
# Substrate
beefy-primitives = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
ethereum-types = { version = "0.14.0" }
fc-rpc = { version = "2.0.0-dev", path = "../../client/rpc" }
frontier-template-runtime = { path = "../../template/runtime" }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-client-db = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
substrate-test-runtime-client = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
