[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Mapping sync logic for Frontier."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.25"
futures-timer = "3.0.1"
log = "0.4.17"
sqlx = { features = ["runtime-tokio-native-tls", "sqlite", "offline"], git = "https://github.com/PureStake/sqlx", branch = "v0.6.2-timeout" }
# Substrate
sc-client-api = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
# Frontier
fc-db = { workspace = true }
fp-consensus = { workspace = true, features = ["std"] }
fp-rpc = { workspace = true, features = ["std"] }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
ethereum = { version = "0.14.0", features = ["with-codec"] }
tempfile = "3.3.0"
# Frontier
fp-storage = { workspace = true }
fp-consensus = { workspace = true }
# Substrate
beefy-primitives = { workspace = true }
ethereum-types = { workspace = true }
fc-rpc = { workspace = true }
frontier-template-runtime = { workspace = true }
sc-block-builder = { workspace = true }
sc-client-db = { workspace = true }
sp-consensus = { workspace = true }
sp-io = { workspace = true }
substrate-test-runtime-client = { workspace = true }