[package]
name = "fp-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Primitives for Frontier consensus"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
ethereum = { package = "ethereum", git = "https://github.com/girazoki/ethereum", branch = "girazoki-0.9.31-fork", default-features = false, features = ["with-codec"]}

# Parity
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# Substrate
sp-core = { version = "6.0.0", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.31", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.31", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.31", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	# Parity
	"codec/std",
	# Substrate
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
