[package]
name = "fp-evm"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Primitive EVM abstractions for Substrate."
repository = "https://github.com/paritytech/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { package = "evm", git = "https://github.com/girazoki/evm", branch = "girazoki-0.9.31-fork", features = ["with-codec"], default-features = false }
serde = { version = "1.0.144", features = ["derive"], optional = true }

# Parity
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

# Substrate
sp-core = { version = "6.0.0", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.31", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.31", default-features = false }
# Substrate FRAME
frame-support = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.31", default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"serde",
	# Parity
	"codec/std",
	# Substrate
	"sp-core/std",
	"sp-std/std",
	# Substrate FRAME
	"frame-support/std",
]
