[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Test vector support for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
evm = { package = "evm", git = "https://github.com/girazoki/evm", branch = "girazoki-0.9.31-fork", features = ["with-codec"]}
hex = "0.4.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"

# Substrate
sp-core = { version = "6.0.0", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.31" }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../../primitives/evm" }
