[package]
name = "pallet-evm-precompile-secp256r1"
version = "2.0.0-dev"
license = "Apache-2.0"
description = "secp256r1 elliptic curve precompile for EVM pallet."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
p256 = { version = "0.13.2", default-features = false, features = [
	"ecdsa",
] }

# Frontier
fp-evm = { workspace = true }

[features]
default = ["std"]
std = [
	# Frontier
	"fp-evm/std",
]
